# Kavvka

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
examples/: test_kavvka.py
src/kavvka/: __main__.py  cli.py  config.json  czkawka_helper.py
src/kavvka/doc/: czkawka_Instruction.md  intro.md  setup.md  算法.md
