[project]
name = "kavvka"
version = "0.3.0"
description = "Czkawka辅助工具，用于处理图片文件夹并生成路径"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pathlib",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.3",
    "pyperclip>=1.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
kavvka = "kavvka.__main__:main"
kvk = "kavvka.__main__:main"
